@@ -74,9 +74,15 @@ module Gluon
       end
     end
 
-    def self.included(module_or_class)
-      module_or_class.extend(Syntax)
-      super
+    class << self
+      def included(module_or_class)
+        module_or_class.extend(Syntax)
+        super
+      end
+
+      def find_path_filter(page_type)
+        entry = PATH_FILTER[page_type] and return entry[:filter]
+      end
     end
   end
 end
