@@ -1,3 +1,7 @@
+2009-07-05  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb: redefine gluon path filter.
+
 2009-07-04  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb: new syntax for controller.
